updated metadata on posts

--- a/_posts/2012-01-06-configuring-nfs-on-fonera-2-0n.html
+++ b/_posts/2012-01-06-configuring-nfs-on-fonera-2-0n.html
@@ -1,28 +1,12 @@
 ---
-layout: post
-status: publish
-published: true
 title: Configuring NFS on Fonera 2.0n
-author:
-  display_name: Sudesh Jethoe
-  login: sudeshjethoe
-  email: sudesh@jethoe.nl
-  url: ''
-author_login: sudeshjethoe
-author_email: sudesh@jethoe.nl
-wordpress_id: 11
-wordpress_url: http://sudeshjethoe.wordpress.com/?p=11
 date: '2012-01-06 02:08:11 +0100'
-date_gmt: '2012-01-06 02:08:11 +0100'
 categories:
-- Uncategorized
-- linux
+- blog
 tags:
 - linux
 - fon
 - nfs
-- nfs3
-comments: []
 ---
 <p>1. Install nfs: 'opkg install unfs3'<br />
 2:Edit hosts.deny:<br />
