--- a/_posts/2015-03-08-installing-an-ssd-fedora-16.html
+++ b/_posts/2015-03-08-installing-an-ssd-fedora-16.html
@@ -1,27 +1,12 @@
 ---
-layout: post
-status: publish
-published: true
 title: Installing an SSD (Fedora 16)
-author:
-  display_name: Sudesh Jethoe
-  login: sudeshjethoe
-  email: sudesh@jethoe.nl
-  url: ''
-author_login: sudeshjethoe
-author_email: sudesh@jethoe.nl
-wordpress_id: 24
-wordpress_url: http://sudeshjethoe.wordpress.com/?p=24
 date: '2015-03-08 16:53:57 +0100'
-date_gmt: '2015-03-08 16:53:57 +0100'
 categories:
-- Uncategorized
-- linux
+- blog
 tags:
 - linux
 - fedora
 - ssd
-comments: []
 ---
 <p>I just bought an SSD drive and I want to make sure it works best as it can.<br />
 I migrate my old / (ext4) partition to this drive.<br />
