--- a/_posts/2015-11-02-preparing-powershell-scripting-development-environment.html
+++ b/_posts/2015-11-02-preparing-powershell-scripting-development-environment.html
@@ -1,29 +1,13 @@
 ---
-layout: post
-status: publish
-published: true
 title: Preparing Powershell (Scripting) Development Environment
-author:
-  display_name: Sudesh Jethoe
-  login: sudeshjethoe
-  email: sudesh@jethoe.nl
-  url: ''
-author_login: sudeshjethoe
-author_email: sudesh@jethoe.nl
-wordpress_id: 57
-wordpress_url: https://sudeshjethoe.wordpress.com/?p=57
 date: '2015-11-02 12:49:39 +0100'
-date_gmt: '2015-11-02 11:49:39 +0100'
 categories:
-- Uncategorized
-- powershell
-- windows
+- blog
 tags:
 - conemu
 - powershell
 - psreadline
 - windows
-comments: []
 ---
 <p>The Windows Powershell scripting language is a powerful advancement from older scripting language in Windows (Batch, VBScript). The language integrates features from other scripting languages (bash) and it is able to utilize existing (.Net) libraries.</p>
 <p>A big difference between other scripting languages and Powershell is that it is fully object-based and not text-based. Therefore it is important to keep in mind that what you might see as output on your screen is only a representation of the object, but not the object itself.</p>
