--- a/_posts/2016-02-14-installation-sqlplus.html
+++ b/_posts/2016-02-14-installation-sqlplus.html
@@ -1,25 +1,12 @@
 ---
-layout: post
-status: publish
-published: true
 title: Installation SQLplus
-author:
-  display_name: Sudesh Jethoe
-  login: sudeshjethoe
-  email: sudesh@jethoe.nl
-  url: ''
-author_login: sudeshjethoe
-author_email: sudesh@jethoe.nl
-wordpress_id: 51
-wordpress_url: https://sudeshjethoe.wordpress.com/?p=51
 date: '2016-02-14 15:29:13 +0100'
-date_gmt: '2016-02-14 14:29:13 +0100'
 categories:
-- Uncategorized
+- blog
+tags:
 - linux
 - oracle
 - sqlplus
-tags: []
 comments: []
 ---
 <p>For a customer I was required to extract and report data from an Oracle database<br />
