--- a/_posts/2016-02-14-utilizing-lvm-thin-provisioned-snapshots.html
+++ b/_posts/2016-02-14-utilizing-lvm-thin-provisioned-snapshots.html
@@ -1,25 +1,11 @@
 ---
-layout: post
-status: publish
-published: true
 title: Utilizing lvm thin provisioned snapshots
-author:
-  display_name: Sudesh Jethoe
-  login: sudeshjethoe
-  email: sudesh@jethoe.nl
-  url: ''
-author_login: sudeshjethoe
-author_email: sudesh@jethoe.nl
-wordpress_id: 84
-wordpress_url: https://sudeshjethoe.wordpress.com/?p=84
 date: '2016-02-14 15:05:20 +0100'
-date_gmt: '2016-02-14 14:05:20 +0100'
 categories:
-- Uncategorized
+- blog
+tags:
 - linux
 - lvm
-tags: []
-comments: []
 ---
 <p>To fully utilize the few bits of space which is provided by my SSD, I always take the following approach.</p>
 <p>1. Create an "as large as possible" LVM volume group to hold all my data.<br />
