--- a/_posts/2018-05-03-configure-postfix-with-gmail-as-relayhost.html
+++ b/_posts/2018-05-03-configure-postfix-with-gmail-as-relayhost.html
@@ -1,22 +1,8 @@
 ---
-layout: post
-status: publish
-published: true
 title: Configure postfix with Gmail as relayhost
-author:
-  display_name: Sudesh Jethoe
-  login: sudeshjethoe
-  email: sudesh@jethoe.nl
-  url: ''
-author_login: sudeshjethoe
-author_email: sudesh@jethoe.nl
-wordpress_id: 1829
-wordpress_url: https://www.dynamicautomation.nl/?p=1829
 date: '2018-05-03 14:30:56 +0200'
-date_gmt: '2018-05-03 13:30:56 +0200'
 categories:
-- Uncategorized
-- linux
+- blog
 tags:
 - linux
 - postfix
