--- a/_posts/2012-01-06-access-unix-nfs-shares-from-windows-xp.html
+++ b/_posts/2012-01-06-access-unix-nfs-shares-from-windows-xp.html
@@ -1,10 +1,8 @@
 ---
-layout: post
 title: Access Unix NFS shares from Windows XP
 date: '2012-01-06 12:22:34 +0100'
 categories:
-- Uncategorized
-- linux
+- blog
 tags:
 - linux
 - nfs
