--- a/_posts/2015-03-08-rhca-ex442-study-materials-overview.html
+++ b/_posts/2015-03-08-rhca-ex442-study-materials-overview.html
@@ -1,29 +1,14 @@
 ---
-layout: post
-status: publish
-published: true
 title: RHCA EX442 study materials overview
-author:
-  display_name: Sudesh Jethoe
-  login: sudeshjethoe
-  email: sudesh@jethoe.nl
-  url: ''
-author_login: sudeshjethoe
-author_email: sudesh@jethoe.nl
-wordpress_id: 1817
-wordpress_url: https://sudeshjethoe.wordpress.com/?p=36
 date: '2015-03-08 17:12:19 +0100'
-date_gmt: '2015-03-08 17:12:19 +0100'
 categories:
-- Uncategorized
-- linux
+- blog
 tags:
 - linux
 - ex442
 - monitoring
 - performance
 - rhca
-comments: []
 ---
 <p>D. John Shakshober and Larry Woodman&rsquo;s yearly presentation at the Summit on Performance Analysis and Tuning for RHEL:<br />
 <a href="http://www.redhat.com/promo/summit/2010/presentations/summit/decoding-the-code/thurs/dshak-310-performance/larry_shak_perf_summit2010_v4.pdf" target="_blank">Performance Analysis &amp; Tuning of Red Hat Enterprise Linux</a></p>
