added new pages

--- a/_posts/2016-02-14-how-to-setup-nagios-event-handlers-using-passive-checks-and-nrpe.html
+++ b/_posts/2016-02-14-how-to-setup-nagios-event-handlers-using-passive-checks-and-nrpe.html
@@ -1,15 +1,13 @@
 ---
-layout: post
 title: How to setup nagios event handlers using passive checks and NRPE
 date: '2016-02-14 15:23:09 +0100'
 categories:
-- Uncategorized
+- blog
+tags:
 - linux
 - nagios
 - nrpe
 - nsca
-tags: []
-comments: []
 ---
 <h2>Introduction</h2>
 <p>Nagios event handlers allow nagios to automatically apply remedial actions when certain&nbsp;events occur (e.g. automatic restart of a service when it goes down).<br />
