added new pages

--- a/_posts/2015-11-02-preparing-powershell-scripting-development-environment.html
+++ b/_posts/2015-11-02-preparing-powershell-scripting-development-environment.html
@@ -1,6 +1,7 @@
 ---
 title: Preparing Powershell (Scripting) Development Environment
 date: '2015-11-02 12:49:39 +0100'
+toc: true
 categories:
 - blog
 tags:
